Version 2.9.5
=============

* Improved creation of documentation for all exported objects.

* Added new factory of MPS-encoded functions: `mps_sum_of_exponentials`.

* Introduced `QuantizedInterval` for regular intervals with `2**n` points.

* All MPS-encoded function factories now use `QuantizedInterval`.